kgateway/modern-traffic/http-route-by-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-router-hostname
  namespace: default
  labels:
    app.kubernetes.io/name: simple-router
    app.kubernetes.io/component: httproute
spec:
  parentRefs:
    - name: gateway-api
      sectionName: http
      kind: Gateway
  hostnames:
    - demo.apigateway.com
  rules:
    - backendRefs:
        - name: simple-router-svc
          port: 80
          weight: 1
