kgateway/modern-traffic/httproute-by-path-rewrite.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-router-rewrite
  namespace: default
  labels:
    app.kubernetes.io/name: simple-router
    app.kubernetes.io/component: httproute

spec:
  parentRefs:
    - name: gateway-api
      sectionName: http
      kind: Gateway

  hostnames:
    - demo.apigateway.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/python
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: simple-router-svc
          port: 80
          weight: 1
